--- a/config.toml
+++ b/config.toml
@@ -2,5 +2,10 @@ baseURL = "https://asahilinux.org/"
 languageCode = "en-us"
 title = "Asahi Linux"
 
+pluralizelisttitles = false
+
 [markup.goldmark.renderer]
 unsafe= true
+
+[permalinks]
+blog = "/:year/:month/:title/"
