--- a/config.toml
+++ b/config.toml
@@ -2,8 +2,13 @@ baseURL = "https://asahilinux.org/"
 languageCode = "en-us"
 title = "Asahi Linux"
 
+pluralizelisttitles = false
+
 [markup.goldmark.renderer]
 unsafe= true
 
 [minify.tdewolff.html]
 keepWhitespace=true
+
+[permalinks]
+blog = "/:year/:month/:title/"
