config: Enable DNT for Twitter embeds
Signed-off-by: Hector Martin <marcan@marcan.st>

--- a/config.toml
+++ b/config.toml
@@ -19,3 +19,6 @@ home = ["HTML"]
 section = ["HTML", "RSS"]
 taxonomy = ["HTML", "RSS"]
 term = ["HTML", "RSS"]
+
+[privacy.twitter]
+enableDNT = true
